--- a/QiHuangDJ/VIewController/Information/KHLInformationTableViewCell.xib
+++ b/QiHuangDJ/VIewController/Information/KHLInformationTableViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
@@ -29,7 +29,7 @@
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1234" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pzi-vA-h1o" userLabel="Browse Counting Label">
-                                        <rect key="frame" x="15" y="0.0" width="24" height="15"/>
+                                        <rect key="frame" x="15" y="0.0" width="23.5" height="15"/>
                                         <constraints>
                                             <constraint firstAttribute="width" relation="greaterThanOrEqual" priority="999" constant="1" id="0J2-b3-laZ"/>
                                         </constraints>
@@ -94,7 +94,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="老子是日期！" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bRW-yl-zIe">
-                                <rect key="frame" x="8" y="29" width="184" height="12"/>
+                                <rect key="frame" x="8" y="35" width="184" height="12"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="1" id="6GY-bR-sXZ"/>
                                 </constraints>
@@ -103,7 +103,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="在在在在在在在在在在在在在在在在在在在在在在在在在在在在在在在在在在在在" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QMq-BA-ELO">
-                                <rect key="frame" x="8" y="49" width="184" height="15"/>
+                                <rect key="frame" x="8" y="50" width="184" height="14.5"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="1" id="Djc-Xs-Mm4"/>
                                 </constraints>
@@ -116,10 +116,10 @@
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="dCV-m6-1PU" secondAttribute="bottom" constant="3" id="6D6-aS-7oV"/>
                             <constraint firstAttribute="trailing" secondItem="QMq-BA-ELO" secondAttribute="trailing" constant="8" id="7Db-wd-IwY"/>
-                            <constraint firstItem="QMq-BA-ELO" firstAttribute="top" secondItem="bRW-yl-zIe" secondAttribute="bottom" constant="8" id="MHD-FU-PU6"/>
+                            <constraint firstItem="QMq-BA-ELO" firstAttribute="top" secondItem="bRW-yl-zIe" secondAttribute="bottom" constant="3" id="MHD-FU-PU6"/>
                             <constraint firstAttribute="trailing" secondItem="XMJ-g4-cgJ" secondAttribute="trailing" constant="8" id="NJe-kf-9HK"/>
                             <constraint firstAttribute="trailing" secondItem="dCV-m6-1PU" secondAttribute="trailing" constant="4" id="Q6c-Vy-Zj3"/>
-                            <constraint firstItem="bRW-yl-zIe" firstAttribute="top" secondItem="XMJ-g4-cgJ" secondAttribute="bottom" constant="4" id="S1M-v3-MWj"/>
+                            <constraint firstItem="bRW-yl-zIe" firstAttribute="top" secondItem="XMJ-g4-cgJ" secondAttribute="bottom" constant="10" id="S1M-v3-MWj"/>
                             <constraint firstAttribute="trailing" secondItem="bRW-yl-zIe" secondAttribute="trailing" constant="8" id="bVC-AW-fbM"/>
                             <constraint firstItem="QMq-BA-ELO" firstAttribute="leading" secondItem="iMh-CH-rq1" secondAttribute="leading" constant="8" id="bgP-Jj-Qah"/>
                             <constraint firstItem="XMJ-g4-cgJ" firstAttribute="top" secondItem="iMh-CH-rq1" secondAttribute="top" constant="8" id="ev7-US-1Q7"/>
@@ -153,7 +153,7 @@
                 <outlet property="thumbImageView" destination="FRw-6r-Hc8" id="EHR-v3-YpW"/>
                 <outlet property="titleLabel" destination="XMJ-g4-cgJ" id="oVe-xA-Ul0"/>
             </connections>
-            <point key="canvasLocation" x="330" y="236"/>
+            <point key="canvasLocation" x="244" y="39"/>
         </tableViewCell>
     </objects>
     <resources>
