--- a/QiHuangDJ/VIewController/dianbo/dianbolist/KHLCategorySliderTableViewCell.xib
+++ b/QiHuangDJ/VIewController/dianbo/dianbolist/KHLCategorySliderTableViewCell.xib
@@ -23,35 +23,46 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="溪云初起日沉阁" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NKs-Gc-QEA" userLabel="Category Label">
-                        <rect key="frame" x="44" y="8" width="200" height="28"/>
+                        <rect key="frame" x="44" y="8" width="220" height="28"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" red="0.96078431369999995" green="0.96078431369999995" blue="0.96078431369999995" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eHO-7k-as4" userLabel="Category Subscribe Button">
-                        <rect key="frame" x="252" y="8" width="60" height="28"/>
+                        <rect key="frame" x="272" y="10" width="40" height="23.5"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="60" id="tsH-Y6-fKR"/>
+                            <constraint firstAttribute="width" constant="40" id="tsH-Y6-fKR"/>
                         </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <state key="normal" title="订阅" backgroundImage="celan_dinngyue_press.png">
                             <color key="titleColor" red="1" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <color key="titleShadowColor" red="1" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         </state>
                     </button>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LcF-wt-SWY">
+                        <rect key="frame" x="0.0" y="43" width="320" height="1"/>
+                        <color key="backgroundColor" red="0.10196078431372549" green="0.050980392156862744" blue="0.027450980392156862" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="1" id="jEE-LI-7vE"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 <constraints>
                     <constraint firstAttribute="bottomMargin" secondItem="XXc-tL-QmZ" secondAttribute="bottom" id="NjB-cC-wq9"/>
-                    <constraint firstItem="eHO-7k-as4" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="P0t-PO-gC7"/>
+                    <constraint firstItem="eHO-7k-as4" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" constant="-2" id="P0t-PO-gC7"/>
                     <constraint firstItem="NKs-Gc-QEA" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="36" id="QRM-cT-Z9n"/>
                     <constraint firstItem="XXc-tL-QmZ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="SLh-r8-vPT"/>
                     <constraint firstItem="XXc-tL-QmZ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="XWk-rg-NTh"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="LcF-wt-SWY" secondAttribute="bottom" constant="-8" id="YeU-G2-zdY"/>
+                    <constraint firstItem="LcF-wt-SWY" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="-8" id="aDd-l7-Ogd"/>
                     <constraint firstAttribute="bottomMargin" secondItem="NKs-Gc-QEA" secondAttribute="bottom" id="d0X-J6-hS7"/>
-                    <constraint firstItem="eHO-7k-as4" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="d5p-aA-4MZ"/>
+                    <constraint firstItem="eHO-7k-as4" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="2" id="d5p-aA-4MZ"/>
                     <constraint firstItem="NKs-Gc-QEA" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="g5e-Vx-40O"/>
                     <constraint firstItem="eHO-7k-as4" firstAttribute="leading" secondItem="NKs-Gc-QEA" secondAttribute="trailing" constant="8" symbolic="YES" id="orZ-Yk-gyS"/>
                     <constraint firstAttribute="trailingMargin" secondItem="eHO-7k-as4" secondAttribute="trailing" id="sGp-Rb-nzi"/>
                     <constraint firstItem="NKs-Gc-QEA" firstAttribute="leading" secondItem="XXc-tL-QmZ" secondAttribute="trailing" constant="8" symbolic="YES" id="vwy-P3-pUO"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="LcF-wt-SWY" secondAttribute="trailing" constant="-8" id="xO3-VU-650"/>
                 </constraints>
                 <variation key="default">
                     <mask key="constraints">
