--- a/QiHuangDJ/VIewController/dianbo/VideoDianbo/DianboCell.xib
+++ b/QiHuangDJ/VIewController/dianbo/VideoDianbo/DianboCell.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6245" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
+        <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
     <objects>
@@ -17,19 +18,19 @@
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="标题 标题 标题 标题 " lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="156" translatesAutoresizingMaskIntoConstraints="NO" id="rwk-SJ-L8s">
                         <rect key="frame" x="71" y="8" width="156" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="时间" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="72" translatesAutoresizingMaskIntoConstraints="NO" id="Ta5-Le-gEx">
-                        <rect key="frame" x="244" y="8" width="72" height="21"/>
+                        <rect key="frame" x="245" y="8" width="72" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" restorationIdentifier="content label" text="内容 内容 内容 内容 内容内容 内容 内容 内容 内容内容 内容 内容 内容 内容" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="236" translatesAutoresizingMaskIntoConstraints="NO" id="LPD-ZD-Rse">
                         <rect key="frame" x="71" y="25" width="245" height="47"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -75,15 +76,17 @@
             </tableViewCellContentView>
             <connections>
                 <outlet property="badCountLabel" destination="Al7-Ye-Qg5" id="O6o-FS-lm1"/>
+                <outlet property="badMethod" destination="l9a-zn-L4m" id="q34-Tp-oXs"/>
                 <outlet property="contentLabel" destination="LPD-ZD-Rse" id="Lkq-rs-g1f"/>
                 <outlet property="goodCountLabel" destination="nVP-7p-Nfp" id="VCR-9t-C4H"/>
+                <outlet property="goodMethod" destination="Niq-PX-XN7" id="rNY-tQ-1G7"/>
                 <outlet property="huifuMehod" destination="hzs-7N-SNC" id="0FL-d8-M0U"/>
                 <outlet property="imgeWithIcon" destination="J8c-Rz-xos" id="h5Z-3b-IgI"/>
                 <outlet property="jubaoMedhod" destination="JpN-Rm-FDd" id="TM9-1Y-iPL"/>
                 <outlet property="timeLabel" destination="Ta5-Le-gEx" id="obF-pY-0A8"/>
                 <outlet property="titleLabel" destination="rwk-SJ-L8s" id="O9x-1r-ubz"/>
             </connections>
-            <point key="canvasLocation" x="-384" y="89"/>
+            <point key="canvasLocation" x="-580" y="25"/>
         </tableViewCell>
     </objects>
     <resources>
